<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".controller.LoginPemilikActivity">

    <!--Selamat Datang-->
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/bg_header_1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/orkney_bold"
            android:text="@string/str_welcome"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/orkney_light"
            android:text="@string/str_welcome2"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


    <!--Login Sesion-->
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.103"
        tools:layout_editor_absoluteX="40dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/orkney_bold"
            android:gravity="center"
            android:text="@string/str_title_login"
            android:textAlignment="center"
            style="@style/Theme.TinggalIn"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/bg_edittext"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:background="@null"
                android:drawableStart="@drawable/username_icon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/orkney_light"
                android:hint="@string/str_hint_username"
                android:inputType="textShortMessage"
                android:nextFocusDown="@id/edt_password"
                android:selectAllOnFocus="true"
                style="@style/Theme.TinggalIn"
                android:textColorHint="@color/grey"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/bg_edittext"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:background="@null"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/orkney_light"
                android:hint="@string/str_hint_password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                style="@style/Theme.TinggalIn"
                android:textColorHint="@color/grey"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bg_btn_login"
            android:focusable="false"
            android:fontFamily="@font/orkney_medium"
            android:text="@string/str_btn_login"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_kalimat_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/orkney_regular"
                android:text="@string/str_kalimat_register"
                android:layout_marginLeft="15dp"
                android:textAlignment="textStart"
                style="@style/Theme.TinggalIn"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:layout_editor_absoluteX="0dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/orkney_bold"
                android:text="@string/str_register"
                android:layout_marginLeft="3dp"
                android:textAlignment="textStart"
                android:textColor="@color/light_blue"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:layout_editor_absoluteX="0dp" />
        </LinearLayout>

    </LinearLayout>


    <!--Watermark-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_watermark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/orkney_light"
        android:text="@string/str_mark"
        android:textAlignment="center"
        style="@style/Theme.TinggalIn"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>