<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    tools:context=".controller.RegisterPemilikActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/orkney_bold"
            android:text="@string/str_title_register_pemilik"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <androidx.cardview.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/stalls_data_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            style="@style/Theme.TinggalIn"
            app:cardCornerRadius="30dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/bg_edittext"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="15dp"
                        android:background="@null"
                        android:drawableStart="@drawable/email_icon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/orkney_light"
                        android:hint="@string/str_hint_reg_email"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@id/edt_username"
                        android:selectAllOnFocus="true"
                        style="@style/Theme.TinggalIn"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/bg_edittext"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="15dp"
                        android:background="@null"
                        android:drawableStart="@drawable/username_icon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/orkney_light"
                        android:hint="@string/str_hint_reg_username"
                        android:inputType="textShortMessage"
                        android:nextFocusDown="@id/edt_password"
                        android:selectAllOnFocus="true"
                        style="@style/Theme.TinggalIn"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/bg_edittext"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="15dp"
                        android:background="@null"
                        android:drawableStart="@drawable/password_icon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/orkney_light"
                        android:hint="@string/str_hint_reg_password"
                        android:inputType="textPassword"
                        android:nextFocusDown="@id/edt_con_password"
                        android:selectAllOnFocus="true"
                        style="@style/Theme.TinggalIn"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/bg_edittext"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_con_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="15dp"
                        android:background="@null"
                        android:drawableStart="@drawable/password_icon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/orkney_light"
                        android:hint="@string/str_hint_reg_con_password"
                        android:inputType="textPassword"
                        android:nextFocusDown="@id/edt_password"
                        android:selectAllOnFocus="true"
                        style="@style/Theme.TinggalIn"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/orkney_bold"
                    android:text="@string/str_reg_gender"
                    android:textAlignment="textStart"
                    android:textColor="@color/blue"
                    android:textSize="14sp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_group_gender">
                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/blue"
                            android:fontFamily="@font/orkney_medium"
                            android:text="@string/str_gender_male"
                            android:checked="false"
                            android:textSize="14sp" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/blue"
                            android:fontFamily="@font/orkney_medium"
                            android:text="@string/str_gender_female"
                            android:checked="false"
                            android:textSize="14sp" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="13">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_weight="9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/orkney_bold"
                        android:text="@string/str_reg_age"
                        android:textAlignment="textStart"
                        android:textColor="@color/blue"
                        android:textSize="14sp"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_age"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/orkney_bold"
                        android:hint="0"
                        android:textColorHint="@color/blue"
                        android:textAlignment="center"
                        android:backgroundTint="@color/blue"
                        android:inputType="numberSigned"
                        android:textColor="@color/blue"
                        android:textSize="14sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/orkney_bold"
                        android:text="@string/str_reg_year"
                        android:textAlignment="textEnd"
                        android:textColor="@color/blue"
                        android:textSize="14sp"/>
                </LinearLayout>

                <SeekBar
                    android:id="@+id/sb_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/blue"
                    android:progressTint="@color/dark_blue"
                    android:min="0"
                    android:max="100"/>

                <CheckBox
                    android:id="@+id/cb_term"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:buttonTint="@color/blue"
                    android:textSize="14sp"
                    android:text="@string/str_reg_term_and_condition" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_btn_red"
                android:focusable="false"
                android:fontFamily="@font/orkney_medium"
                android:text="@string/str_btn_cancel"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_regist"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_btn_blue"
                android:focusable="false"
                android:fontFamily="@font/orkney_medium"
                android:text="@string/str_btn_regist"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>