<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    tools:context=".FormKontrakanActivity">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="20dp"
      android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/orkney_bold"
        android:text="@string/str_title_form_kontrakan"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        style="@style/Theme.TinggalIn"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="20dp"
          android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/bg_edittext"
            android:orientation="horizontal">

          <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/edt_kontrakan_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginHorizontal="15dp"
              android:background="@null"
              android:drawableStart="@drawable/kontrakan_icon"
              android:drawablePadding="10dp"
              android:fontFamily="@font/orkney_light"
              android:hint="@string/str_hint_kontrakan_name"
              android:inputType="textPersonName"
              android:nextFocusDown="@id/edt_username"
              android:selectAllOnFocus="true"
              style="@style/Theme.TinggalIn"
              android:textColorHint="@color/grey"
              android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/bg_edittext"
            android:orientation="horizontal">

          <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/edt_owner_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginHorizontal="15dp"
              android:background="@null"
              android:drawableStart="@drawable/username_icon"
              android:drawablePadding="10dp"
              android:fontFamily="@font/orkney_light"
              android:hint="@string/str_hint_owner_name"
              android:inputType="textShortMessage"
              android:nextFocusDown="@id/edt_password"
              android:selectAllOnFocus="true"
              style="@style/Theme.TinggalIn"
              android:textColorHint="@color/grey"
              android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/bg_edittext"
            android:orientation="horizontal">

          <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/edt_harga_sewa"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginHorizontal="15dp"
              android:background="@null"
              android:drawableStart="@drawable/uang_icon"
              android:drawablePadding="10dp"
              android:fontFamily="@font/orkney_light"
              android:hint="@string/str_hint_harga_sewa"
              android:inputType="number"
              android:nextFocusDown="@id/edt_con_password"
              android:selectAllOnFocus="true"
              style="@style/Theme.TinggalIn"
              android:textColorHint="@color/grey"
              android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/bg_edittext"
            android:orientation="horizontal">

          <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/edt_alamat_kontrakan"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginHorizontal="15dp"
              android:background="@null"
              android:drawableStart="@drawable/address_icon"
              android:drawablePadding="10dp"
              android:fontFamily="@font/orkney_light"
              android:hint="@string/str_hint_kontrakan_location"
              android:inputType="textShortMessage"
              android:nextFocusDown="@id/edt_password"
              android:selectAllOnFocus="true"
              style="@style/Theme.TinggalIn"
              android:textColorHint="@color/grey"
              android:textSize="14sp" />
        </LinearLayout>
      </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="4">

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btn_cancel"
          android:layout_width="0dp"
          android:layout_weight="2"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:background="@drawable/bg_btn_red"
          android:focusable="false"
          android:fontFamily="@font/orkney_medium"
          android:text="@string/str_btn_cancel"
          android:textColor="@color/white"
          android:textSize="16dp" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btn_tambah"
          android:layout_width="0dp"
          android:layout_weight="2"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:background="@drawable/bg_btn_blue"
          android:focusable="false"
          android:fontFamily="@font/orkney_medium"
          android:text="@string/str_btn_tambah"
          android:textColor="@color/white"
          android:textSize="16dp" />
    </LinearLayout>


  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>