<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/kontrakan_data_cardview"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:src="@drawable/kontrakan_icon"/>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_kontrakan_name"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/orkney_medium"
                    android:text="@string/str_kontrakan_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:fontFamily="@font/orkney_regular"
                    android:text="@string/str_owner_name"
                    android:textColor="@color/grey"
                    android:textSize="10sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_kontrakan_location"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:fontFamily="@font/orkney_regular"
                    android:text="@string/str_kontrakan_location"
                    android:textColor="@color/grey"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:fontFamily="@font/orkney_bold"
                    android:text="@string/str_harga_sewa"
                    android:textColor="@color/blue"
                    android:textSize="10sp"
                    android:textAlignment="textEnd"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_harga_sewa"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:fontFamily="@font/orkney_regular"
                    android:text="00000000"
                    android:textColor="@color/blue"
                    android:textSize="10sp"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>